# sfind

./: AGENTS.md  Cargo.toml  README.md
src/: claude.rs  codex.rs  lib.rs  main.rs  opencode.rs  session.rs  ui.rs
src/providers/: claude.rs  codex.rs  mod.rs  opencode.rs
tests/: help.rs
