[package]
name = "sfind"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Find and resume local Codex, OpenCode, and Claude Code sessions"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "5"
ratatui = "0.29"
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
